[gd_scene load_steps=9 format=3 uid="uid://b77lvbvumc7uj"]

[ext_resource type="Theme" uid="uid://t6wu146mxlyh" path="res://misc/theme.tres" id="1_2cuvk"]
[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_8aifg"]
[ext_resource type="AudioStream" uid="uid://crv0ic1kxw0nt" path="res://audio/sfx/click.wav" id="2_buc8u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_61ic0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6v4o"]
bg_color = Color(0.0313726, 0.0392157, 0.0509804, 0.615686)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v1j3m"]
bg_color = Color(0.0313726, 0.0392157, 0.0509804, 0.615686)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e03d1"]
bg_color = Color(0.0313726, 0.0392157, 0.0509804, 0.615686)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_47nqf"]
bg_color = Color(0.0313726, 0.0392157, 0.0509804, 0.615686)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[node name="Settings" type="PanelContainer" groups=["settings"]]
custom_minimum_size = Vector2(148, 0)
anchors_preset = -1
anchor_right = 0.928125
anchor_bottom = 0.575
offset_right = -149.0
offset_bottom = -69.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_2cuvk")
script = ExtResource("1_8aifg")
metadata/_edit_use_anchors_ = true

[node name="M" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 1

[node name="List" type="VBoxContainer" parent="M"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Music" type="HBoxContainer" parent="M/List"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="M/List/Music"]
layout_mode = 2
text = "music"

[node name="HSlider" type="HSlider" parent="M/List/Music"]
custom_minimum_size = Vector2(97, 0)
layout_mode = 2
max_value = 20.0
value = 20.0

[node name="Sound" type="HBoxContainer" parent="M/List"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="M/List/Sound"]
layout_mode = 2
text = "sound"

[node name="HSlider" type="HSlider" parent="M/List/Sound"]
custom_minimum_size = Vector2(97, 0)
layout_mode = 2
max_value = 20.0
value = 20.0

[node name="Sensitivity" type="HBoxContainer" parent="M/List"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="M/List/Sensitivity"]
layout_mode = 2
text = "mouse"

[node name="HSlider" type="HSlider" parent="M/List/Sensitivity"]
custom_minimum_size = Vector2(97, 0)
layout_mode = 2
max_value = 20.0
value = 20.0

[node name="Shake" type="HBoxContainer" parent="M/List"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="M/List/Shake"]
layout_mode = 2
text = "shake"

[node name="HSlider" type="HSlider" parent="M/List/Shake"]
custom_minimum_size = Vector2(97, 0)
layout_mode = 2
max_value = 20.0
value = 20.0

[node name="Fullscreen" type="CheckButton" parent="M/List"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_61ic0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c6v4o")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_61ic0")
theme_override_styles/hover = SubResource("StyleBoxFlat_v1j3m")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_e03d1")
theme_override_styles/focus = SubResource("StyleBoxFlat_47nqf")
text = "FULLSCREEN"

[node name="Back" type="Button" parent="M/List"]
layout_mode = 2
text = "BACK"

[node name="ClickSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_buc8u")
volume_db = -5.0
bus = &"sfx"

[connection signal="drag_ended" from="M/List/Music/HSlider" to="." method="_on_music_drag_ended"]
[connection signal="value_changed" from="M/List/Music/HSlider" to="." method="_on_music_value_changed"]
[connection signal="drag_ended" from="M/List/Sound/HSlider" to="." method="_on_sound_drag_ended"]
[connection signal="value_changed" from="M/List/Sound/HSlider" to="." method="_on_sound_value_changed"]
[connection signal="drag_ended" from="M/List/Sensitivity/HSlider" to="." method="_on_sens_drag_ended"]
[connection signal="value_changed" from="M/List/Sensitivity/HSlider" to="." method="_on_sens_value_changed"]
[connection signal="drag_ended" from="M/List/Shake/HSlider" to="." method="_on_shake_drag_ended"]
[connection signal="value_changed" from="M/List/Shake/HSlider" to="." method="_on_shake_value_changed"]
[connection signal="toggled" from="M/List/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="M/List/Back" to="." method="_on_back_pressed"]
